--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">gow</string>
+    <string name="app_name">God of Wind</string>
 </resources>
